# accel-week2-challenge

./: Anchor.toml  package.json
cron/: cron.ts
programs/accel-week2-challenge/: Cargo.toml
programs/accel-week2-challenge/src/: lib.rs  schedule.rs
tests/: accel-week2-challenge.ts  tuktuk.ts
